--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 
   <!DOCTYPE html>
-  <html lang="en">
+  <html lang="fr">
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Vinted x Tadao App Structure</title>
+      <title>Vin'Tour</title>
     </head>
 
     <body>
